--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,19 +13,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout Code
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
     
-    - name: Docker login
+    - name: Docker Login
       env: 
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSOWORD: ${{ secrets.DOCKER_PASSOWORD }}
       run: |
-        echo "Iniciando login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSOWORD
-        echo "Fin del login"
+    - name: Build Docker Image
+      run: |
+        docker build -t eduardoucr/docker-graphql:0.0.2 .
+    - name: Push Docker Image
+      run: |
+        docker push eduardoucr/docker-graphql:0.0.2 .
+    
+    
 
    # - name: Build the Docker image
    #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
