--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,9 +27,11 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t eduardoucr/docker-graphql:0.0.2 .
+        docker build -t eduardoucr/docker-graphql:latest .
     - name: Push Docker Image
       run: |
         docker push eduardoucr/docker-graphql:0.0.2
+        docker push eduardoucr/docker-graphql:latest
     
     
 
