--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,18 +30,22 @@ jobs:
       env: 
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSOWORD: ${{ secrets.DOCKER_PASSOWORD }}
-        NEW_VERSION: ${{steps.version.outputs.version}}
+     
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSOWORD
         echo "New version: $NEW_VERSION !!!!!!!!!"
- #   - name: Build Docker Image
- #     run: |
- #       docker build -t eduardoucr/docker-graphql:0.0.2 .
- #       docker build -t eduardoucr/docker-graphql:latest .
- #   - name: Push Docker Image
- #     run: |
- #       docker push eduardoucr/docker-graphql:0.0.2
- #       docker push eduardoucr/docker-graphql:latest
+    - name: Build Docker Image
+      env:
+       NEW_VERSION: ${{steps.version.outputs.version}}
+      run: |
+        docker build -t eduardoucr/docker-graphql:$NEW_VERSION .
+        docker build -t eduardoucr/docker-graphql:latest .
+    - name: Push Docker Image
+      env:
+       NEW_VERSION: ${{steps.version.outputs.version}}
+      run: |
+        docker push eduardoucr/docker-graphql:$NEW_VERSION
+        docker push eduardoucr/docker-graphql:latest
     
     
 
